; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ath/extr_regd.c_is_wwr_sku.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ath/extr_regd.c_is_wwr_sku.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@COUNTRY_ERD_FLAG = common dso_local global i32 0, align 4
@WORLD_SKU_MASK = common dso_local global i32 0, align 4
@WORLD_SKU_PREFIX = common dso_local global i32 0, align 4
@WORLD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @is_wwr_sku to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_wwr_sku(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @COUNTRY_ERD_FLAG, align 4
  %5 = and i32 %3, %4
  %6 = load i32, i32* @COUNTRY_ERD_FLAG, align 4
  %7 = icmp ne i32 %5, %6
  br i1 %7, label %8, label %20

8:                                                ; preds = %1
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* @WORLD_SKU_MASK, align 4
  %11 = and i32 %9, %10
  %12 = load i32, i32* @WORLD_SKU_PREFIX, align 4
  %13 = icmp eq i32 %11, %12
  br i1 %13, label %18, label %14

14:                                               ; preds = %8
  %15 = load i32, i32* %2, align 4
  %16 = load i32, i32* @WORLD, align 4
  %17 = icmp eq i32 %15, %16
  br label %18

18:                                               ; preds = %14, %8
  %19 = phi i1 [ true, %8 ], [ %17, %14 ]
  br label %20

20:                                               ; preds = %18, %1
  %21 = phi i1 [ false, %1 ], [ %19, %18 ]
  %22 = zext i1 %21 to i32
  ret i32 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
